fixed scroll bug on mobile

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -10,9 +10,13 @@ body {
   margin-left: 25px;
   margin-right: 25px;
   background-attachment: fixed;
+  margin-top: 100px;
+  margin-bottom: 150px;
 }
 
 .vimeoWrapper {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   padding: 56.25% 0 0 0;
   margin-top: 100px;
   position: relative;
